--- a/Halloapp/pt.lproj/InfoPlist.strings
+++ b/Halloapp/pt.lproj/InfoPlist.strings
@@ -2,7 +2,7 @@
 "CFBundleName" = "HalloApp";
 
 /* Privacy - Camera Usage Description */
-"NSCameraUsageDescription" = "Isso permite tirar fotos e gravar vídeos diretamente do HalloApp.";
+"NSCameraUsageDescription" = "Isso permite fazer chamadas de vídeo e tirar fotos e vídeos no HalloApp";
 
 /* Privacy - Contacts Usage Description */
 "NSContactsUsageDescription" = "Permita que o HalloApp acesse seus contatos para poder compartilhar e ver postagens de seus amigos e familiares.";
